# awesome-indexer

./: .gitignore  README.md  config.yaml  pyproject.toml  test.html
awindex/: awelist.py  cli.py  models.py  pagefind.py  utils.py  zenodo.py  zotero.py
awindex/templates/: index.html
test/: awesome-web-archiving.md  ipres-awindex-test.jsonl
