[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-indexer"
authors = [
    {name = "Andrew Jackson", email = "andrew.jackson@dpconline.org"},
]
description = "Tools for building an index of Awesome Lists and more."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = [
    "diskcache",
    "Jinja2",
    "mistletoe",
    "pagefind[bin]",
    "pydantic",
    "pydantic-settings",
    "pyzotero",
    "pyyaml",
    "requests",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["awindex"]

[project.scripts]
awindex = "awindex:cli.main"
